Bug 386448 - With krarc:/ handler installed, Dolphin doesn't exit archive when clicking on parent folder in location bar
Summary: With krarc:/ handler installed, Dolphin doesn't exit archive when clicking on...
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: krarc (other bugs)
Version First Reported In: 2.7.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords: triaged
: 398511 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-11-02 07:12 UTC by Kishore Gopalakrishnan
Modified: 2019-09-05 13:45 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.62
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2017-11-02 07:12:27 UTC
Steps to reproduce:
1. Open a zip archive in dolphin with the 'open archives as folder' enabled (I tested with a zip file, which is opened using the krarc protocol).
2. Now click on the breadcrumb in the location area for a parent folder which is outside the archive.

Observed results:
You get an error saying the file or folder does not exist. Dolphin is still attempting to use the krarc protocol.

Expected result:
Dolphin should not try to use the krarc protocol for the parent folder. Dolphin exhibits the correct behaviour while opening tar.gz files using the tar protocol (i.e. it allows to open the parent folder by clicking on the breadcrumb), so a similar behaviour is expected in this case too.
Comment 1 Christoph Feck 2017-11-09 00:48:28 UTC
I think this is a bug in "krarc:" handler.

Can you uninstall Krusader, and confirm that the regular "zip:" KIO handler works better?
Comment 2 Kishore Gopalakrishnan 2017-11-09 02:40:07 UTC
(In reply to Christoph Feck from comment #1)
> I think this is a bug in "krarc:" handler.
> 
> Can you uninstall Krusader, and confirm that the regular "zip:" KIO handler
> works better?

Yes. The 'zip:' handler gives the expected behaviour. Should this bug be reported under krusader, then?
Comment 3 Nate Graham 2017-11-09 03:05:04 UTC
Yep. I'll move it.
Comment 4 Davide Gianforte 2018-01-30 07:00:07 UTC
Confirmed with git krusader and dolphin 17.12.1 as described by Kishore
Comment 5 Nikita Melnichenko 2018-02-16 04:56:11 UTC
I also confirm. Changing status.
Comment 6 Christoph Feck 2018-10-11 13:24:24 UTC
*** Bug 398511 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2019-04-12 17:05:32 UTC
Git commit 0cb9fe93e1909c07d2e668dbdb6fe98bfe882a44 by Nate Graham, on behalf of Natsumi Higa.
Committed on 12/04/2019 at 17:05.
Pushed by ngraham into branch 'master'.

[KUrlNavigator] Fix URL navigation when exiting archive with krarc and Dolphin

Summary:
If Krusader is installed, the `krarc` protocol is available and Dolphin may use it to open ZIP archives. In this case, when the user goes back to a parent folder outside the archive, a "file or folder does not exist" error will be returned. This can be fixed by including krarc in the URL scheme check inside the `KUrlNavigator::setLocationUrl` method.
FIXED-IN: 5.58

Test Plan:
1. Install Krusader and Dolphin.
2. Enable "Open archives as folder" in Dolphin and open a zip file using the `krarc` protocol. (Change `zip:` to `karc:` when applicable.)
3. Click on the breadcrumb in the location area for a parent folder which is outside the archive.

Reviewers: kde-frameworks-devel, ngraham

Reviewed By: ngraham

Subscribers: bcooksley, aacid, ngraham

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D20424

M  +4    -4    src/filewidgets/kurlnavigator.cpp

https://commits.kde.org/kio/0cb9fe93e1909c07d2e668dbdb6fe98bfe882a44
Comment 8 Nate Graham 2019-09-05 13:45:54 UTC
Git commit 509640f8e1857405a6aca45d9039f1a4b397d9ba by Nate Graham, on behalf of Natsumi Higa.
Committed on 05/09/2019 at 13:45.
Pushed by ngraham into branch 'master'.

[KUrlNavigator] Add MIME types supported by krarc to isCompressedPath

Summary:
With D23476 applied, this patch should let users who have Krusader installed to view files inside a 7z or RAR archive in KDE applications (such as Gwenview) without decompressing the whole archive to another location. They will also be able to navigate the archive using Dolphin.
FIXED-IN: 5.62

Test Plan:
Test using Dolphin:
Enable "Open archives as folder" in Dolphin, then open a 7z/RAR archive. It should be using the `krarc` protocol. Then browse the archive. Click on the breadcrumb in the location area for a parent folder which is outside the archive to make sure Bug 386448 does not occur.

Test using Gwenview:
View a 7z/RAR archive containing photos. Browse and view images inside the archive.

Reviewers: #frameworks, cfeck, pino, dfaure

Reviewed By: dfaure

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D23490

M  +8    -2    src/filewidgets/kurlnavigator.cpp

https://commits.kde.org/kio/509640f8e1857405a6aca45d9039f1a4b397d9ba